<resources>
    <string name="app_name">BranchApp</string>


    <string name="continue_with_id_password">Continue with ID Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="signout">SignOut</string>


    <string name="todo">TODO</string>


    <string name="sign_out">Sign Out</string>
    <string name="accessGymAnywhere">Access Gym Anywhere</string>
    <string name="hello_blank_fragment">frag</string>
    <string name="branches">Branches</string>
    <string name="settings">Settings</string>
    <string name="add_branch">Add branch</string>


    <string name="business">Business</string>
    <string name="view_business_performance">View Business Performance</string>
    <string name="view_stats">View Stats</string>
    <string name="view_specific_branch_performance">View Specific Branch Performance</string>
    <string name="branch_income">Branch Income</string>
    <string name="continuestr">continue</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_id">Branch ID</string>
    <string name="branch_password">Branch Password</string>
    <string name="branch_manager">Branch Manager</string>
    <string name="textview">textview</string>
    <string name="users_breakdown">Users Breakdown</string>
</resources>