<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/manager"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/lg_preview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/semibold"
            android:text="@string/branch_manager"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </RelativeLayout>



    <TextView
        android:id="@+id/demo_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lg_preview_logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/semibold"
        android:gravity="center_horizontal"
        android:text="@string/proceed_with_your"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/demo_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/demo_txt_1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/semibold"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuBranch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demo_txt_2"
        android:layout_marginTop="20dp"
        android:drawablePadding="12dp"
        app:hintEnabled="false">

        <AutoCompleteTextView
            android:id="@+id/branch_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/semibold"
            android:hint="@string/branch_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_email_edit_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/menuBranch"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/regular"
        android:hint="@string/branch_id"
        android:textAllCaps="false"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:fontFamily="@font/semibold"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_pass_edit_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_email_edit_lay"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/regular"
        android:hint="@string/branch_password"
        android:textAllCaps="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/semibold"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotpass_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/regular"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_circular"
        android:fontFamily="@font/semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>